--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "@emailjs/browser": "4.4.1",
-    "@emotion/react": "11.14.0",
-    "@emotion/styled": "11.14.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "5.1.1",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.2",
     "@mui/icons-material": "6.4.6",
-    "@mui/material": "6.4.6",
+    "@mui/material": "^6.4.6",
     "@mui/styled-engine-sc": "6.4.6",
     "@mui/toolpad": "0.1.51",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -61,6 +61,7 @@
     "lucide-react": "^0.475.0",
     "next-themes": "^0.4.4",
     "react": "19.0.0",
+    "react-calendar": "^5.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
